--- a/package.json
+++ b/package.json
@@ -24,33 +24,33 @@
     "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "rimraf": "^3.0.2",
-    "webpack": "^5.55.1",
-    "webpack-dev-middleware": "^5.2.1",
-    "webpack-hot-middleware": "^2.25.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/node": "^7.15.4",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-minify": "^0.5.1",
-    "babel-watch": "^7.5.0",
-    "core-js": "^3.18.2",
+    "babel-watch": "^7.6.0",
+    "core-js": "^3.19.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.3.0",
-    "eslint": "^7.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-webpack-plugin": "^3.0.1",
+    "eslint-webpack-plugin": "^3.1.1",
     "mini-css-extract-plugin": "^2.4.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0"
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-dev-server": "^4.5.0",
+    "webpack-hot-middleware": "^2.25.1"
   }
 }
