--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projnotes",
+  "name": "fish-project",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,25 +10,22 @@
     "cleanc": "rimraf public/js",
     "b:s": "npm run cleans && babel ./server --out-dir dist-server --copy-files",
     "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
-    "build": " npm run b:c && npm run b:s"
+    "build": "npm run b:c && npm run b:s"
   },
   "dependencies": {
-    "app-root-path": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "express-handlebars": "^5.3.4",
-    "hbs": "^4.1.2",
+    "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
-    "rimraf": "^3.0.2",
-    "winston": "^3.3.3"
+    "nodeenv": "^3.0.71",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.15.8",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "babel-eslint": "^10.1.0",
@@ -37,6 +34,7 @@
     "babel-preset-minify": "^0.5.1",
     "babel-watch": "^7.6.0",
     "core-js": "^3.19.1",
+    "core.js": "^0.4.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.3.0",
     "eslint": "^7.32.0",
@@ -45,8 +43,9 @@
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-webpack-plugin": "^3.1.1",
+    "eslint-webpack-plugin": "^2.6.0",
     "mini-css-extract-plugin": "^2.4.2",
+    "prettier": "^2.4.1",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.2.1",
