--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./dist-server/bin/www",
     "dev": "cross-env NODE_ENV=development babel-watch --watch ./server/views ./server/bin/www",
+    "w:d": "cross-env NODE_ENV=development bable-watch --watch ./server/views ./server/bin/www",
     "w:s": "cross-env NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
     "cleans": "rimraf dist-server",
     "cleanc": "rimraf public/js",
