--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "npm run b:c && npm run b:s"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -21,7 +22,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodeenv": "^3.0.71",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
